--- a/ItemRental-Android/build.gradle
+++ b/ItemRental-Android/build.gradle
@@ -1,7 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    // Kotlin
+    ext.kotlin_version = '1.3.11'
+
+    // Dagger 2
+    ext.dagger2_version = '2.15'
+
+    // Timber
+    ext.timber_version = '4.7.1'
+
+    // Lifecycle & ViewModel
+    ext.lifecycle_version = '1.1.1'
+
+    // Retrofit
+    ext.retrofit_version = '2.4.0'
+
+    // Rx
+    ext.rxandroid_version = '2.1.0'
+    ext.rxjava_version = '2.2.3'
+    ext.rx_retrofit_adapter_version = '1.0.0'
+
+    // OkHttp
+    ext.okhttp_version = '3.10.0'
+
     repositories {
         google()
         jcenter()
