--- a/ItemRental-Android/app/src/main/AndroidManifest.xml
+++ b/ItemRental-Android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="proiectcolectiv.g934.itemrental">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
             android:name=".ItemRentalApplication"
             android:allowBackup="true"
