--- a/itemRental-Reactjs/package.json
+++ b/itemRental-Reactjs/package.json
@@ -13,6 +13,8 @@
     "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
+    "@date-io/date-fns": "0.0.2",
+    "@date-io/moment": "0.0.2",
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
     "axios": "^0.18.0",
@@ -24,12 +26,15 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "date-fns": "^2.0.0-alpha.21",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "^2.0.0",
     "history": "^4.7.2",
     "install-prompt-banner": "^0.0.6",
     "jwt-decode": "^2.2.0",
+    "material-ui-pickers": "^2.0.5",
+    "moment": "^2.23.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "react": "^16.4.1",
@@ -37,6 +42,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-dropzone": "^5.0.1",
+    "react-moment": "^0.8.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
