--- a/ItemRental-Android/app/build.gradle
+++ b/ItemRental-Android/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 
     implementation "com.google.android.material:material:$material_design_version"
 
+    // FileProvider
+    implementation "com.android.support:support-compat:28.0.0"
+
     // LiveData & ViewModel
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
