--- a/ItemRental-Android/app/build.gradle
+++ b/ItemRental-Android/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 
     implementation "com.google.android.material:material:$material_design_version"
 
+    // Navigation Component
+    implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
+
     // FileProvider
     implementation "com.android.support:support-compat:28.0.0"
 
