--- a/ItemRental-Android/app/src/main/AndroidManifest.xml
+++ b/ItemRental-Android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="proiectcolectiv.g934.itemrental">
+          xmlns:tools="http://schemas.android.com/tools" package="proiectcolectiv.g934.itemrental">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,16 +15,16 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".page.login.LoginActivity"
-        android:windowSoftInputMode="adjustPan">
+            android:theme="@style/AppTheme"
+            tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".page.main.MainActivity"
+        android:windowSoftInputMode="adjustPan"
+        android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <provider
                 android:name="androidx.core.content.FileProvider"
                 android:authorities="com.example.android.fileprovider"
