Separate single page into multiple elements Touch Iulian's code :>

--- a/itemRental-Reactjs/package.json
+++ b/itemRental-Reactjs/package.json
@@ -37,6 +37,7 @@
     "install-prompt-banner": "^0.0.6",
     "jwt-decode": "^2.2.0",
     "material-ui-pickers": "^2.1.1",
+    "material-ui-rating": "^2.0.0",
     "moment": "^2.23.0",
     "node-sass": "4.5.3",
     "normalize.css": "8.0.0",
@@ -55,6 +56,7 @@
     "redux-thunk": "^2.3.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "typeface-roboto": "0.0.54",
     "url-loader": "^1.1.1",
     "uuid": "3.1.0",
     "validator": "^10.5.0",
