--- a/ItemRental-Android/app/build.gradle
+++ b/ItemRental-Android/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "androidx.appcompat:appcompat:$androidx_version"
     implementation "androidx.legacy:legacy-support-v4:$androidx_version"
@@ -68,6 +68,10 @@ dependencies {
 
     // Timber Logging
     implementation "com.jakewharton.timber:timber:$timber_version"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
