--- a/itemRental-Server/requirements.txt
+++ b/itemRental-Server/requirements.txt
@@ -13,10 +13,11 @@ Flask-Migrate==2.3.0
 Flask-OpenID==1.2.5
 Flask-RESTful==0.3.6
 Flask-Script==2.0.6
+Flask-Cors==3.0.7
 Flask-SQLAlchemy==2.3.2
 Genshi==0.7.1
 idna==2.7
-ItsDangerous==1.0.0
+ItsDangerous==1.1.0
 Jinja2==2.10
 jwt==0.5.4
 Mako==1.0.7
