Modified app to work with current server Changed start and end date selection to Calendar Range Selection

--- a/ItemRental-Android/app/build.gradle
+++ b/ItemRental-Android/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:1.10.0'
     implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
 
+    // DateRangePicker
+    implementation 'com.savvi.datepicker:rangepicker:1.2.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
