Add review functionality with a few bug fixes

--- a/ItemRental-Android/app/src/main/AndroidManifest.xml
+++ b/ItemRental-Android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".page.main.MainActivity"
@@ -38,6 +39,6 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-    </provider>
+        </provider>
     </application>
 </manifest>
